Not able to map a fucking list of string with a function that takes strings and returns strings

--- a/bhdmhw1/ToDo.txt
+++ b/bhdmhw1/ToDo.txt
@@ -26,6 +26,7 @@ WRITEUP
 Tables
 - F1 Score
 - Term weights, how to improve
+- Compare stem,stop,berniulli,multinomial,alpha F1 scores
 
 
 SCALA FIX
