--- a/bhdmhw1/README
+++ b/bhdmhw1/README
@@ -13,12 +13,12 @@ mvn compile
 mvn test
 mvn package
 mvn clean
-mvn scala:run
 mvn java:run
-
+mvn scala:compile scala:run
 
 SOURCES
-Polarity data from http://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&ved=0CCAQFjAA&url=http%3A%2F%2Fwww.cs.cornell.edu%2Fpeople%2Fpabo%2Fmovie-review-data%2F&ei=ux8eT5GpHcKeiQKh2IHICw&usg=AFQjCNELSlSs6Fo0N-1A2LH5PrPXowvQgA&sig2=pfV0l4NkKcsJyzmxQwCcwQ
-http://www.koders.com/c/fid6C772BFE1925D9797AD84213004ABB198FC41069.aspx?s=crc for mysqlStopWords
-http://www.ranks.nl/resources/stopwords.html for google ranknl and ranknlall stop words
-http://tartarus.org/martin/PorterStemmer/scala.txt for the porter stemming algorithms
+
+Labeled Movie Review Data: http://www.cs.cornell.edu/people/pabo/movie-review-data/
+MySQL stop words: http://www.koders.com/c/fid6C772BFE1925D9797AD84213004ABB198FC41069.aspx?s=crc
+RankNL StopWords: http://www.ranks.nl/resources/stopwords.html
+Porter Stemming Algorithm: http://tartarus.org/martin/PorterStemmer/scala.txt 
